--- a/E-Despatch/src/main/resources/application.properties
+++ b/E-Despatch/src/main/resources/application.properties
@@ -6,4 +6,19 @@ spring.datasource.password=despatch
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
-server.port=8080
+server.port=8081
+
+
+# access to  actuator RHP
+management.health.mongo.enabled=false
+management.endpoint.health.show-details=always  
+
+# disable beans endpoint  
+management.endpoints.beans.enabled=false  
+# expose all endpoints:
+management.endpoints.web.exposure.include=*  
+
+#info from actuator
+info.app.name=Spring Sample Application
+info.app.description=aplcation  distpach
+info.app.version=1.0.0
